@@ -3,7 +3,7 @@
  * http://www.pwm-project.org
  *
  * Copyright (c) 2006-2009 Novell, Inc.
- * Copyright (c) 2009-2020 The PWM Project
+ * Copyright (c) 2009-2021 The PWM Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,11 +20,17 @@
 
 package password.pwm.health;
 
+import lombok.Value;
 import password.pwm.AppProperty;
 import password.pwm.PwmApplication;
 import password.pwm.PwmApplicationMode;
 import password.pwm.PwmConstants;
-import password.pwm.config.Configuration;
+import password.pwm.PwmDomain;
+import password.pwm.PwmEnvironment;
+import password.pwm.bean.DomainID;
+import password.pwm.bean.SessionLabel;
+import password.pwm.config.AppConfig;
+import password.pwm.config.DomainConfig;
 import password.pwm.config.PwmSetting;
 import password.pwm.config.PwmSettingSyntax;
 import password.pwm.config.option.DataStorageMethod;
@@ -36,17 +42,19 @@ import password.pwm.config.profile.HelpdeskProfile;
 import password.pwm.config.profile.LdapProfile;
 import password.pwm.config.profile.NewUserProfile;
 import password.pwm.config.profile.PwmPasswordPolicy;
-import password.pwm.config.stored.StoredConfigItemKey;
+import password.pwm.config.stored.StoredConfigKey;
 import password.pwm.config.stored.StoredConfiguration;
 import password.pwm.config.value.StoredValue;
 import password.pwm.config.value.ValueTypeConverter;
 import password.pwm.config.value.data.FormConfiguration;
 import password.pwm.config.value.data.UserPermission;
 import password.pwm.error.PwmUnrecoverableException;
+import password.pwm.http.servlet.configguide.ConfigGuideForm;
 import password.pwm.i18n.Config;
 import password.pwm.ldap.permission.UserPermissionUtility;
 import password.pwm.util.PasswordData;
 import password.pwm.util.i18n.LocaleHelper;
+import password.pwm.util.java.CollectionUtil;
 import password.pwm.util.java.StringUtil;
 import password.pwm.util.logging.PwmLogger;
 import password.pwm.util.password.PasswordUtility;
@@ -55,93 +63,24 @@ import java.net.URI;
 import java.net.URISyntaxException;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.NoSuchElementException;
+import java.util.Optional;
 import java.util.Set;
+import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
-public class ConfigurationChecker implements HealthChecker
+public class ConfigurationChecker implements HealthSupplier
 {
     private static final PwmLogger LOGGER = PwmLogger.forClass( ConfigurationChecker.class );
 
-    @Override
-    public List<HealthRecord> doHealthCheck( final PwmApplication pwmApplication )
-    {
-        if ( pwmApplication.getConfig() == null )
-        {
-            return Collections.emptyList();
-        }
-
-        final Configuration config = pwmApplication.getConfig();
-
-        final List<HealthRecord> records = new ArrayList<>();
-
-        if ( pwmApplication.getApplicationMode() == PwmApplicationMode.CONFIGURATION )
-        {
-            records.add( HealthRecord.forMessage( HealthMessage.Config_ConfigMode ) );
-        }
-
-        if ( config.readSettingAsBoolean( PwmSetting.NEWUSER_ENABLE ) )
-        {
-            for ( final NewUserProfile newUserProfile : config.getNewUserProfiles().values() )
-            {
-                try
-                {
-                    newUserProfile.getNewUserPasswordPolicy( pwmApplication, PwmConstants.DEFAULT_LOCALE );
-                }
-                catch ( final PwmUnrecoverableException e )
-                {
-                    records.add( HealthRecord.forMessage(
-                            HealthMessage.NewUser_PwTemplateBad,
-                             PwmSetting.NEWUSER_PASSWORD_POLICY_USER.toMenuLocationDebug( newUserProfile.getIdentifier(), PwmConstants.DEFAULT_LOCALE ),
-                             e.getMessage() ) );
-                }
-            }
-        }
-
-        records.addAll( doHealthCheck( config, PwmConstants.DEFAULT_LOCALE ) );
-
-        return Collections.unmodifiableList( records );
-    }
-
-    public List<HealthRecord> doHealthCheck( final Configuration config, final Locale locale )
-    {
-        if ( config.readSettingAsBoolean( PwmSetting.HIDE_CONFIGURATION_HEALTH_WARNINGS ) )
-        {
-            return Collections.emptyList();
-        }
-
-        return Collections.unmodifiableList( allChecks( config, locale ) );
-    }
-
-
-    private List<HealthRecord> allChecks(
-            final Configuration config,
-            final Locale locale
-    )
-    {
-        final List<HealthRecord> records = new ArrayList<>();
-        for ( final Class<? extends ConfigHealthCheck> clazz : ALL_CHECKS )
-        {
-            final ConfigHealthCheck healthCheckClass;
-            try
-            {
-                healthCheckClass = clazz.getDeclaredConstructor().newInstance();
-                records.addAll( healthCheckClass.healthCheck( config, locale ) );
-            }
-            catch ( final Exception e )
-            {
-                LOGGER.error( () -> "unexpected error during health check operation for class " + clazz.toString() + ", error:" + e.getMessage(), e );
-            }
-        }
-        return records;
-    }
-
-    private static final List<Class<? extends ConfigHealthCheck>> ALL_CHECKS = Collections.unmodifiableList( Arrays.asList(
-            VerifyBasicConfigs.class,
+    private static final List<Class<? extends ConfigDomainHealthCheck>> DOMAIN_CHECKS = List.of(
+            VerifyNewUserPasswordPolicy.class,
+            VerifyBasicDomainConfigs.class,
             VerifyPasswordStrengthLevels.class,
             VerifyPasswordPolicyConfigs.class,
             VerifyResponseLdapAttribute.class,
@@ -150,45 +89,193 @@ public class ConfigurationChecker implements HealthChecker
             VerifyIfDeprecatedJsFormOptionUsed.class,
             VerifyNewUserLdapProfile.class,
             VerifyPasswordWaitTimes.class,
-            VerifyUserPermissionSettings.class
-    ) );
+            VerifyUserPermissionSettings.class );
 
-    static class VerifyBasicConfigs implements ConfigHealthCheck
+    private static final List<Class<? extends ConfigSystemHealthCheck>> SYSTEM_CHECKS = List.of(
+            VerifyBasicSystemConfigs.class,
+            VerifyDbConfiguredIfNeededSystem.class );
+
+    @Override
+    public List<Supplier<List<HealthRecord>>> jobs( final HealthSupplier.HealthSupplierRequest request )
+    {
+        final PwmApplication pwmApplication = request.getPwmApplication();
+        final SessionLabel sessionLabel = request.getSessionLabel();
+
+        if ( pwmApplication.getConfig().readSettingAsBoolean( PwmSetting.HIDE_CONFIGURATION_HEALTH_WARNINGS ) )
+        {
+            return Collections.emptyList();
+        }
+
+        final List<Supplier<List<HealthRecord>>> suppliers = new ArrayList<>();
+        suppliers.add( () -> checkAppMode( pwmApplication ) );
+        for ( final PwmDomain domain : pwmApplication.domains().values() )
+        {
+            suppliers.add( () -> allDomainChecks( sessionLabel, domain.getConfig(), PwmConstants.DEFAULT_LOCALE ) );
+        }
+        suppliers.add( () -> allSystemChecks( sessionLabel, pwmApplication.getConfig(), PwmConstants.DEFAULT_LOCALE ) );
+        return suppliers;
+    }
+
+    public List<HealthRecord> doHealthCheck( final PwmApplication tempApp, final SessionLabel sessionLabel )
+    {
+        final HealthSupplier.HealthSupplierRequest request = new HealthSupplierRequest( tempApp, sessionLabel );
+        return jobs( request ).stream().map( Supplier::get ).flatMap( Collection::stream ).collect( Collectors.toList() );
+    }
+
+    private List<HealthRecord> allDomainChecks( final SessionLabel sessionLabel, final DomainConfig config, final Locale locale )
+    {
+        final List<HealthRecord> records = new ArrayList<>();
+        for ( final Class<? extends ConfigDomainHealthCheck> clazz : DOMAIN_CHECKS )
+        {
+            final ConfigDomainHealthCheck healthCheckClass;
+            try
+            {
+                healthCheckClass = clazz.getDeclaredConstructor().newInstance();
+                records.addAll( healthCheckClass.healthCheck( new DomainHealthCheckRequest( config, locale, sessionLabel ) ) );
+            }
+            catch ( final Exception e )
+            {
+                LOGGER.error( () -> "unexpected error during health check operation for class " + clazz.toString() + ", error:" + e.getMessage(), e );
+            }
+        }
+        return Collections.unmodifiableList( records );
+    }
+
+    private List<HealthRecord> allSystemChecks(
+            final SessionLabel sessionLabel,
+            final AppConfig config,
+            final Locale locale
+    )
+    {
+        final List<HealthRecord> records = new ArrayList<>();
+        for ( final Class<? extends ConfigSystemHealthCheck> clazz : SYSTEM_CHECKS )
+        {
+            final ConfigSystemHealthCheck healthCheckClass;
+            try
+            {
+                healthCheckClass = clazz.getDeclaredConstructor().newInstance();
+                records.addAll( healthCheckClass.healthCheck( new SystemHealthCheckRequest( config, locale, sessionLabel ) ) );
+            }
+            catch ( final Exception e )
+            {
+                LOGGER.error( () -> "unexpected error during health check operation for class " + clazz.toString() + ", error:" + e.getMessage(), e );
+            }
+        }
+        return Collections.unmodifiableList( records );
+    }
+
+    private List<HealthRecord> checkAppMode( final PwmApplication pwmApplication )
+    {
+        final List<HealthRecord> records = new ArrayList<>();
+
+        if ( pwmApplication.getApplicationMode() == PwmApplicationMode.CONFIGURATION )
+        {
+            records.add( HealthRecord.forMessage(
+                    DomainID.systemId(),
+                    HealthMessage.Config_ConfigMode ) );
+        }
+        return Collections.unmodifiableList( records );
+    }
+
+    static class VerifyNewUserPasswordPolicy implements ConfigDomainHealthCheck
     {
         @Override
-        public List<HealthRecord> healthCheck( final Configuration config, final Locale locale )
+        public List<HealthRecord> healthCheck( final DomainHealthCheckRequest domainHealthCheckRequest )
         {
+            final DomainConfig config = domainHealthCheckRequest.getDomainConfig();
             final List<HealthRecord> records = new ArrayList<>();
-            final String siteUrl = config.readSettingAsString( PwmSetting.PWM_SITE_URL );
+
+            if ( config.readSettingAsBoolean( PwmSetting.NEWUSER_ENABLE ) )
+            {
+                for ( final NewUserProfile newUserProfile : config.getNewUserProfiles().values() )
+                {
+                    try
+                    {
+                        final PwmApplication tempApplication = PwmApplication.createPwmApplication( PwmEnvironment.builder().build()
+                                .makeRuntimeInstance( config.getAppConfig() ) );
+                        final PwmDomain tempDomain = tempApplication.domains().get( ConfigGuideForm.DOMAIN_ID );
+
+                        newUserProfile.getNewUserPasswordPolicy( domainHealthCheckRequest.getSessionLabel(), tempDomain, PwmConstants.DEFAULT_LOCALE );
+                    }
+                    catch ( final PwmUnrecoverableException e )
+                    {
+                        records.add( HealthRecord.forMessage(
+                                config.getDomainID(),
+                                HealthMessage.NewUser_PwTemplateBad,
+                                PwmSetting.NEWUSER_PASSWORD_POLICY_USER.toMenuLocationDebug( newUserProfile.getIdentifier(), PwmConstants.DEFAULT_LOCALE ),
+                                e.getMessage() ) );
+                    }
+                }
+            }
+
+            return Collections.unmodifiableList( records );
+        }
+    }
+
+    static class VerifyBasicSystemConfigs implements ConfigSystemHealthCheck
+    {
+        @Override
+        public List<HealthRecord> healthCheck( final SystemHealthCheckRequest systemHealthCheckRequest )
+        {
+            final AppConfig config = systemHealthCheckRequest.getDomainConfig();
+            final Locale locale = systemHealthCheckRequest.getLocale();
+
             final String separator = LocaleHelper.getLocalizedMessage( locale, Config.Display_SettingNavigationSeparator, null );
-
-            if ( siteUrl == null || siteUrl.isEmpty() || siteUrl.equals(
-                    PwmSetting.PWM_SITE_URL.getDefaultValue( config.getTemplate() ).toNativeObject() ) )
-            {
-                records.add(
-                        HealthRecord.forMessage( HealthMessage.Config_NoSiteURL, PwmSetting.PWM_SITE_URL.toMenuLocationDebug( null, locale ) ) );
-            }
-
-            if ( config.readSettingAsBoolean( PwmSetting.LDAP_ENABLE_WIRE_TRACE ) )
-            {
-                records.add(
-                        HealthRecord.forMessage( HealthMessage.Config_LDAPWireTrace, PwmSetting.LDAP_ENABLE_WIRE_TRACE.toMenuLocationDebug( null, locale ) ) );
-            }
+            final List<HealthRecord> records = new ArrayList<>();
 
             if ( Boolean.parseBoolean( config.readAppProperty( AppProperty.LDAP_PROMISCUOUS_ENABLE ) ) )
             {
                 final String appPropertyKey = "AppProperty" + separator + AppProperty.LDAP_PROMISCUOUS_ENABLE.getKey();
-                records.add( HealthRecord.forMessage( HealthMessage.Config_PromiscuousLDAP, appPropertyKey ) );
+                records.add( HealthRecord.forMessage(
+                        DomainID.systemId(),
+                        HealthMessage.Config_PromiscuousLDAP,
+                        appPropertyKey ) );
             }
 
             if ( config.readSettingAsBoolean( PwmSetting.DISPLAY_SHOW_DETAILED_ERRORS ) )
             {
-                records.add( HealthRecord.forMessage( HealthMessage.Config_ShowDetailedErrors, PwmSetting.DISPLAY_SHOW_DETAILED_ERRORS.toMenuLocationDebug( null, locale ) ) );
+                records.add( HealthRecord.forMessage(
+                        DomainID.systemId(),
+                        HealthMessage.Config_ShowDetailedErrors,
+                        PwmSetting.DISPLAY_SHOW_DETAILED_ERRORS.toMenuLocationDebug( null, locale ) ) );
+            }
+            return Collections.unmodifiableList( records );
+        }
+    }
+
+    static class VerifyBasicDomainConfigs implements ConfigDomainHealthCheck
+    {
+        @Override
+        public List<HealthRecord> healthCheck( final DomainHealthCheckRequest domainHealthCheckRequest )
+        {
+            final DomainConfig config = domainHealthCheckRequest.getDomainConfig();
+            final Locale locale = domainHealthCheckRequest.getLocale();
+
+            final List<HealthRecord> records = new ArrayList<>();
+            final String siteUrl = config.getAppConfig().readSettingAsString( PwmSetting.PWM_SITE_URL );
+
+            if ( siteUrl == null || siteUrl.isEmpty() || siteUrl.equals(
+                    PwmSetting.PWM_SITE_URL.getDefaultValue( config.getTemplate() ).toNativeObject() ) )
+            {
+                records.add( HealthRecord.forMessage(
+                        config.getDomainID(),
+                        HealthMessage.Config_NoSiteURL,
+                        PwmSetting.PWM_SITE_URL.toMenuLocationDebug( null, locale ) ) );
+            }
+
+            if ( config.readSettingAsBoolean( PwmSetting.LDAP_ENABLE_WIRE_TRACE ) )
+            {
+                records.add( HealthRecord.forMessage(
+                        config.getDomainID(),
+                        HealthMessage.Config_LDAPWireTrace,
+                        PwmSetting.LDAP_ENABLE_WIRE_TRACE.toMenuLocationDebug( null, locale ) ) );
             }
 
             if ( config.getLdapProfiles().isEmpty() )
             {
-                records.add( HealthRecord.forMessage( HealthMessage.Config_NoLdapProfiles ) );
+                records.add( HealthRecord.forMessage(
+                        config.getDomainID(),
+                        HealthMessage.Config_NoLdapProfiles ) );
             }
 
             for ( final LdapProfile ldapProfile : config.getLdapProfiles().values() )
@@ -197,6 +284,7 @@ public class ConfigurationChecker implements HealthChecker
                 if ( testUserDN == null || testUserDN.length() < 1 )
                 {
                     records.add( HealthRecord.forMessage(
+                            config.getDomainID(),
                             HealthMessage.Config_AddTestUser,
                             PwmSetting.LDAP_TEST_USER_DN.toMenuLocationDebug( ldapProfile.getIdentifier(), locale )
                     ) );
@@ -217,6 +305,7 @@ public class ConfigurationChecker implements HealthChecker
                             if ( !secure )
                             {
                                 records.add( HealthRecord.forMessage(
+                                        config.getDomainID(),
                                         HealthMessage.Config_LDAPUnsecure,
                                         PwmSetting.LDAP_SERVER_URLS.toMenuLocationDebug( ldapProfile.getIdentifier(), locale )
                                 ) );
@@ -224,7 +313,9 @@ public class ConfigurationChecker implements HealthChecker
                         }
                         catch ( final URISyntaxException e )
                         {
-                            records.add( HealthRecord.forMessage( HealthMessage.Config_ParseError,
+                            records.add( HealthRecord.forMessage(
+                                    config.getDomainID(),
+                                    HealthMessage.Config_ParseError,
                                     e.getMessage(),
                                     PwmSetting.LDAP_SERVER_URLS.toMenuLocationDebug( ldapProfile.getIdentifier(), locale ),
                                     urlStringValue
@@ -234,80 +325,93 @@ public class ConfigurationChecker implements HealthChecker
                 }
             }
 
-            return records;
-        }
-    }
-
-    static class VerifyPasswordStrengthLevels implements ConfigHealthCheck
-    {
-        @Override
-        public List<HealthRecord> healthCheck( final Configuration config, final Locale locale )
-        {
-            final List<HealthRecord> records = new ArrayList<>();
-
-            try
-            {
-                for ( final StoredConfigItemKey key : config.getStoredConfiguration().modifiedItems() )
-                {
-                    if ( key.getRecordType() == StoredConfigItemKey.RecordType.SETTING )
-                    {
-                        final PwmSetting pwmSetting = key.toPwmSetting();
-                        if ( pwmSetting.getSyntax() == PwmSettingSyntax.PASSWORD )
-                        {
-                            final StoredValue storedValue = config.getStoredConfiguration().readSetting( pwmSetting, key.getProfileID() );
-                            final PasswordData passwordValue = ( PasswordData ) storedValue.toNativeObject();
-                            if ( passwordValue != null )
-                            {
-                                final String stringValue = passwordValue.getStringValue();
-
-                                if ( !StringUtil.isEmpty( stringValue ) )
-                                {
-                                    final int strength = PasswordUtility.judgePasswordStrength( config, stringValue );
-                                    if ( strength < 50 )
-                                    {
-                                        records.add( HealthRecord.forMessage( HealthMessage.Config_WeakPassword,
-                                                pwmSetting.toMenuLocationDebug( key.getProfileID(), locale ), String.valueOf( strength ) ) );
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-            catch ( final PwmUnrecoverableException e )
-            {
-                LOGGER.error( () -> "unexpected error examining password strength of configuration: " );
-            }
-
             return Collections.unmodifiableList( records );
         }
     }
 
-    static class VerifyResponseLdapAttribute implements ConfigHealthCheck
+    static class VerifyPasswordStrengthLevels implements ConfigDomainHealthCheck
     {
         @Override
-        public List<HealthRecord> healthCheck(
-                final Configuration config,
-                final Locale locale
-        )
+        public List<HealthRecord> healthCheck( final DomainHealthCheckRequest domainHealthCheckRequest )
         {
+            final DomainConfig config = domainHealthCheckRequest.getDomainConfig();
             final List<HealthRecord> records = new ArrayList<>();
-            final PwmSetting[] interestedSettings = new PwmSetting[]
+
+            final List<StoredConfigKey> interestedKeys = CollectionUtil.iteratorToStream( config.getStoredConfiguration().keys() )
+                    .filter( key -> key.isRecordType( StoredConfigKey.RecordType.SETTING ) )
+                    .filter( key -> key.toPwmSetting().getSyntax() == PwmSettingSyntax.PASSWORD )
+                    .collect( Collectors.toList() );
+
+            for ( final StoredConfigKey key : interestedKeys )
+            {
+                try
+                {
+                    checkKey( domainHealthCheckRequest, key ).ifPresent( records::add );
+                }
+                catch ( final PwmUnrecoverableException e )
+                {
+                    LOGGER.error( () -> "unexpected error examining password strength of configuration: " );
+                }
+            }
+
+            return Collections.unmodifiableList( records );
+        }
+
+        private Optional<HealthRecord> checkKey( final DomainHealthCheckRequest domainHealthCheckRequest, final StoredConfigKey key )
+                throws PwmUnrecoverableException
+        {
+            final StoredConfiguration config = domainHealthCheckRequest.getDomainConfig().getStoredConfiguration();
+            final PwmSetting pwmSetting = key.toPwmSetting();
+            final StoredValue storedValue = config.readStoredValue( key ).orElseThrow();
+            final PasswordData passwordValue = ValueTypeConverter.valueToPassword( storedValue );
+
+            if ( passwordValue != null )
+            {
+                final String stringValue = passwordValue.getStringValue();
+
+                if ( StringUtil.notEmpty( stringValue ) )
+                {
+                    final int strength = PasswordUtility.judgePasswordStrength( domainHealthCheckRequest.getDomainConfig(), stringValue );
+                    if ( strength < 50 )
                     {
+                        return Optional.of( HealthRecord.forMessage(
+                                domainHealthCheckRequest.getDomainConfig().getDomainID(),
+                                HealthMessage.Config_WeakPassword,
+                                pwmSetting.toMenuLocationDebug( key.getProfileID(), domainHealthCheckRequest.getLocale() ), String.valueOf( strength ) ) );
+                    }
+                }
+            }
+
+            return Optional.empty();
+        }
+    }
+
+    static class VerifyResponseLdapAttribute implements ConfigDomainHealthCheck
+    {
+        @Override
+        public List<HealthRecord> healthCheck( final DomainHealthCheckRequest domainHealthCheckRequest )
+        {
+            final DomainConfig config = domainHealthCheckRequest.getDomainConfig();
+            final Locale locale = domainHealthCheckRequest.getLocale();
+
+            final List<HealthRecord> records = new ArrayList<>();
+            final List<PwmSetting> interestedSettings = List.of(
                             PwmSetting.FORGOTTEN_PASSWORD_READ_PREFERENCE,
-                            PwmSetting.FORGOTTEN_PASSWORD_WRITE_PREFERENCE,
-                            };
+                            PwmSetting.FORGOTTEN_PASSWORD_WRITE_PREFERENCE );
+
             for ( final PwmSetting loopSetting : interestedSettings )
             {
-                if ( config.getResponseStorageLocations( loopSetting ).contains( DataStorageMethod.LDAP ) )
+                if ( config.readGenericStorageLocations( loopSetting ).contains( DataStorageMethod.LDAP ) )
                 {
                     for ( final LdapProfile ldapProfile : config.getLdapProfiles().values() )
                     {
                         final String responseAttr = ldapProfile.readSettingAsString( PwmSetting.CHALLENGE_USER_ATTRIBUTE );
-                        final boolean hasResponseAttribute = responseAttr != null && !responseAttr.isEmpty();
+                        final boolean hasResponseAttribute = StringUtil.notEmpty( responseAttr );
                         if ( !hasResponseAttribute )
                         {
-                            records.add( HealthRecord.forMessage( HealthMessage.Config_MissingLDAPResponseAttr,
+                            records.add( HealthRecord.forMessage(
+                                    config.getDomainID(),
+                                    HealthMessage.Config_MissingLDAPResponseAttr,
                                     loopSetting.toMenuLocationDebug( null, locale ),
                                     PwmSetting.CHALLENGE_USER_ATTRIBUTE.toMenuLocationDebug( ldapProfile.getIdentifier(), locale )
                             ) );
@@ -319,26 +423,27 @@ public class ConfigurationChecker implements HealthChecker
         }
     }
 
-    static class VerifyDbConfiguredIfNeeded implements ConfigHealthCheck
+    static class VerifyDbConfiguredIfNeeded implements ConfigDomainHealthCheck
     {
         @Override
-        public List<HealthRecord> healthCheck( final Configuration config, final Locale locale )
+        public List<HealthRecord> healthCheck( final DomainHealthCheckRequest domainHealthCheckRequest )
         {
+            final DomainConfig config = domainHealthCheckRequest.getDomainConfig();
+            final Locale locale = domainHealthCheckRequest.getLocale();
+
             final List<HealthRecord> records = new ArrayList<>();
-            if ( !config.hasDbConfigured() )
+            if ( !config.getAppConfig().hasDbConfigured() )
             {
                 final Set<PwmSetting> causalSettings = new LinkedHashSet<>();
                 {
-                    final PwmSetting[] settingsToCheck = new PwmSetting[] {
+                    final List<PwmSetting> settingsToCheck = List.of(
                             PwmSetting.FORGOTTEN_PASSWORD_READ_PREFERENCE,
                             PwmSetting.FORGOTTEN_PASSWORD_WRITE_PREFERENCE,
-                            PwmSetting.INTRUDER_STORAGE_METHOD,
-                            PwmSetting.EVENTS_USER_STORAGE_METHOD,
-                            };
+                            PwmSetting.EVENTS_USER_STORAGE_METHOD );
 
                     for ( final PwmSetting loopSetting : settingsToCheck )
                     {
-                        if ( config.getResponseStorageLocations( loopSetting ).contains( DataStorageMethod.DB ) )
+                        if ( config.readGenericStorageLocations( loopSetting ).contains( DataStorageMethod.DB ) )
                         {
                             causalSettings.add( loopSetting );
                         }
@@ -352,20 +457,25 @@ public class ConfigurationChecker implements HealthChecker
 
                 for ( final PwmSetting setting : causalSettings )
                 {
-                    records.add( HealthRecord.forMessage( HealthMessage.Config_MissingDB, setting.toMenuLocationDebug( null, locale ) ) );
+                    records.add( HealthRecord.forMessage(
+                            config.getDomainID(),
+                            HealthMessage.Config_MissingDB,
+                            setting.toMenuLocationDebug( null, locale ) ) );
                 }
             }
 
-            if ( config.getResponseStorageLocations( PwmSetting.FORGOTTEN_PASSWORD_WRITE_PREFERENCE ).contains( DataStorageMethod.LOCALDB ) )
+            if ( config.readGenericStorageLocations( PwmSetting.FORGOTTEN_PASSWORD_WRITE_PREFERENCE ).contains( DataStorageMethod.LOCALDB ) )
             {
                 records.add( HealthRecord.forMessage(
+                        config.getDomainID(),
                         HealthMessage.Config_UsingLocalDBResponseStorage,
                         PwmSetting.FORGOTTEN_PASSWORD_WRITE_PREFERENCE.toMenuLocationDebug( null, locale ) ) );
             }
 
-            if ( config.getOtpSecretStorageLocations( PwmSetting.OTP_SECRET_WRITE_PREFERENCE ).contains( DataStorageMethod.LOCALDB ) )
+            if ( config.readGenericStorageLocations( PwmSetting.OTP_SECRET_WRITE_PREFERENCE ).contains( DataStorageMethod.LOCALDB ) )
             {
                 records.add( HealthRecord.forMessage(
+                        config.getDomainID(),
                         HealthMessage.Config_UsingLocalDBResponseStorage,
                         PwmSetting.OTP_SECRET_WRITE_PREFERENCE.toMenuLocationDebug( null, locale ) ) );
             }
@@ -374,17 +484,58 @@ public class ConfigurationChecker implements HealthChecker
         }
     }
 
-    static class VerifyPasswordPolicyConfigs implements ConfigHealthCheck
+    static class VerifyDbConfiguredIfNeededSystem implements ConfigSystemHealthCheck
     {
         @Override
-        public List<HealthRecord> healthCheck( final Configuration config, final Locale locale )
+        public List<HealthRecord> healthCheck( final SystemHealthCheckRequest systemHealthCheckRequest )
         {
+            final AppConfig config = systemHealthCheckRequest.getDomainConfig();
+            final Locale locale = systemHealthCheckRequest.getLocale();
+            final List<HealthRecord> records = new ArrayList<>();
+            if ( !config.hasDbConfigured() )
+            {
+                final Set<PwmSetting> causalSettings = new LinkedHashSet<>();
+                {
+                    final List<PwmSetting> settingsToCheck = List.of(
+                            PwmSetting.INTRUDER_STORAGE_METHOD  );
+
+                    for ( final PwmSetting loopSetting : settingsToCheck )
+                    {
+                        if ( config.readGenericStorageLocations( loopSetting ).contains( DataStorageMethod.DB ) )
+                        {
+                            causalSettings.add( loopSetting );
+                        }
+                    }
+                }
+
+
+                for ( final PwmSetting setting : causalSettings )
+                {
+                    records.add( HealthRecord.forMessage(
+                            DomainID.systemId(),
+                            HealthMessage.Config_MissingDB,
+                            setting.toMenuLocationDebug( null, locale ) ) );
+                }
+            }
+
+            return records;
+        }
+    }
+
+    static class VerifyPasswordPolicyConfigs implements ConfigDomainHealthCheck
+    {
+        @Override
+        public List<HealthRecord> healthCheck( final DomainHealthCheckRequest domainHealthCheckRequest )
+        {
+            final DomainConfig config = domainHealthCheckRequest.getDomainConfig();
+            final Locale locale = domainHealthCheckRequest.getLocale();
+
             final List<HealthRecord> records = new ArrayList<>();
             for ( final String profileID : config.getPasswordProfileIDs() )
             {
                 try
                 {
-                    final PwmPasswordPolicy pwmPasswordPolicy = config.getPasswordPolicy( profileID, locale );
+                    final PwmPasswordPolicy pwmPasswordPolicy = config.getPasswordPolicy( profileID );
                     records.addAll( pwmPasswordPolicy.health( locale ) );
                 }
                 catch ( final Exception e )
@@ -396,22 +547,26 @@ public class ConfigurationChecker implements HealthChecker
         }
     }
 
-    static class VerifyNewUserLdapProfile implements ConfigHealthCheck
+    static class VerifyNewUserLdapProfile implements ConfigDomainHealthCheck
     {
         @Override
-        public List<HealthRecord> healthCheck( final Configuration config, final Locale locale )
+        public List<HealthRecord> healthCheck( final DomainHealthCheckRequest domainHealthCheckRequest )
         {
+            final DomainConfig config = domainHealthCheckRequest.getDomainConfig();
+            final Locale locale = domainHealthCheckRequest.getLocale();
+
             final List<HealthRecord> records = new ArrayList<>();
             for ( final NewUserProfile newUserProfile : config.getNewUserProfiles().values() )
             {
                 final String configuredProfile = newUserProfile.readSettingAsString( PwmSetting.NEWUSER_LDAP_PROFILE );
-                if ( !StringUtil.isEmpty( configuredProfile ) )
+                if ( StringUtil.notEmpty( configuredProfile ) )
                 {
                     final LdapProfile ldapProfile = config.getLdapProfiles().get( configuredProfile );
 
                     if ( ldapProfile == null )
                     {
                         records.add( HealthRecord.forMessage(
+                                config.getDomainID(),
                                 HealthMessage.Config_InvalidLdapProfile,
                                 PwmSetting.NEWUSER_LDAP_PROFILE.toMenuLocationDebug( newUserProfile.getIdentifier(), locale ) ) );
                     }
@@ -421,65 +576,52 @@ public class ConfigurationChecker implements HealthChecker
         }
     }
 
-    static class VerifyIfDeprecatedJsFormOptionUsed implements ConfigHealthCheck
+    static class VerifyIfDeprecatedJsFormOptionUsed implements ConfigDomainHealthCheck
     {
         @Override
-        public List<HealthRecord> healthCheck( final Configuration config, final Locale locale )
+        public List<HealthRecord> healthCheck( final DomainHealthCheckRequest domainHealthCheckRequest )
         {
+            final DomainConfig config = domainHealthCheckRequest.getDomainConfig();
+            final Locale locale = domainHealthCheckRequest.getLocale();
+
             final List<HealthRecord> records = new ArrayList<>();
 
-            for ( final PwmSetting loopSetting : PwmSetting.values() )
+            final List<StoredConfigKey> interestedKeys = CollectionUtil.iteratorToStream( config.getStoredConfiguration().keys() )
+                    .filter( key -> key.isRecordType( StoredConfigKey.RecordType.SETTING ) )
+                    .filter( key -> key.toPwmSetting().getSyntax() == PwmSettingSyntax.FORM )
+                    .collect( Collectors.toList() );
+
+            for ( final StoredConfigKey key : interestedKeys )
             {
-                if ( loopSetting.getSyntax() == PwmSettingSyntax.FORM )
+                final PwmSetting loopSetting = key.toPwmSetting();
+                final StoredValue storedValue = config.getStoredConfiguration().readStoredValue( key ).orElseThrow();
+                final List<FormConfiguration> forms = ValueTypeConverter.valueToForm( storedValue );
+                for ( final FormConfiguration form : forms )
                 {
-                    if ( loopSetting.getCategory().hasProfiles() )
+                    if ( StringUtil.notEmpty( form.getJavascript() ) )
                     {
-
-                        final List<String> profiles = config.getStoredConfiguration().profilesForSetting( loopSetting );
-                        for ( final String profile : profiles )
-                        {
-                            final StoredValue storedValue = config.getStoredConfiguration().readSetting( loopSetting, profile );
-                            final List<FormConfiguration> forms = (List<FormConfiguration>) storedValue.toNativeObject();
-                            for ( final FormConfiguration form : forms )
-                            {
-                                if ( !StringUtil.isEmpty( form.getJavascript() ) )
-                                {
-                                    records.add( HealthRecord.forMessage(
-                                            HealthMessage.Config_DeprecatedJSForm,
-                                            loopSetting.toMenuLocationDebug( profile, locale ),
-                                            PwmSetting.DISPLAY_CUSTOM_JAVASCRIPT.toMenuLocationDebug( null, locale )
-                                    ) );
-                                }
-                            }
-                        }
-
-                    }
-                    else
-                    {
-                        final List<FormConfiguration> forms = config.readSettingAsForm( loopSetting );
-                        for ( final FormConfiguration form : forms )
-                        {
-                            if ( !StringUtil.isEmpty( form.getJavascript() ) )
-                            {
-                                records.add( HealthRecord.forMessage(
-                                        HealthMessage.Config_DeprecatedJSForm,
-                                        loopSetting.toMenuLocationDebug( null, locale ),
-                                        PwmSetting.DISPLAY_CUSTOM_JAVASCRIPT.toMenuLocationDebug( null, locale )
-                                ) );
-                            }
-                        }
+                        records.add( HealthRecord.forMessage(
+                                config.getDomainID(),
+                                HealthMessage.Config_DeprecatedJSForm,
+                                loopSetting.toMenuLocationDebug( key.getProfileID(), locale ),
+                                PwmSetting.DISPLAY_CUSTOM_JAVASCRIPT.toMenuLocationDebug( null, locale )
+                        ) );
                     }
                 }
+
             }
             return records;
         }
     }
 
-    static class VerifyIfDeprecatedSendMethodValuesUsed implements ConfigHealthCheck
+    static class VerifyIfDeprecatedSendMethodValuesUsed implements ConfigDomainHealthCheck
     {
         @Override
-        public List<HealthRecord> healthCheck( final Configuration config, final Locale locale )
+        public List<HealthRecord> healthCheck( final DomainHealthCheckRequest domainHealthCheckRequest )
         {
+            final DomainConfig config = domainHealthCheckRequest.getDomainConfig();
+            final Locale locale = domainHealthCheckRequest.getLocale();
+
             final Set<MessageSendMethod> deprecatedMethods = Arrays
                     .stream( MessageSendMethod.values() )
                     .filter( MessageSendMethod::isDeprecated )
@@ -492,7 +634,9 @@ public class ConfigurationChecker implements HealthChecker
                 final MessageSendMethod method = activationProfile.readSettingAsEnum( PwmSetting.ACTIVATE_TOKEN_SEND_METHOD, MessageSendMethod.class );
                 if ( deprecatedMethods.contains( method ) )
                 {
-                    records.add( HealthRecord.forMessage( HealthMessage.Config_InvalidSendMethod,
+                    records.add( HealthRecord.forMessage(
+                            config.getDomainID(),
+                            HealthMessage.Config_InvalidSendMethod,
                             method.toString(),
                             PwmSetting.ACTIVATE_TOKEN_SEND_METHOD.toMenuLocationDebug( activationProfile.getIdentifier(), locale )
                     ) );
@@ -503,7 +647,9 @@ public class ConfigurationChecker implements HealthChecker
                 final MessageSendMethod method = config.readSettingAsEnum( PwmSetting.FORGOTTEN_USERNAME_SEND_USERNAME_METHOD, MessageSendMethod.class );
                 if ( deprecatedMethods.contains( method ) )
                 {
-                    records.add( HealthRecord.forMessage( HealthMessage.Config_InvalidSendMethod,
+                    records.add( HealthRecord.forMessage(
+                            config.getDomainID(),
+                            HealthMessage.Config_InvalidSendMethod,
                             method.toString(),
                             PwmSetting.FORGOTTEN_USERNAME_SEND_USERNAME_METHOD.toMenuLocationDebug( null, locale )
                     ) );
@@ -516,7 +662,9 @@ public class ConfigurationChecker implements HealthChecker
 
                 if ( deprecatedMethods.contains( method ) )
                 {
-                    records.add( HealthRecord.forMessage( HealthMessage.Config_InvalidSendMethod,
+                    records.add( HealthRecord.forMessage(
+                            config.getDomainID(),
+                            HealthMessage.Config_InvalidSendMethod,
                             method.toString(),
                             PwmSetting.HELPDESK_TOKEN_SEND_METHOD.toMenuLocationDebug( helpdeskProfile.getIdentifier(), locale )
                     ) );
@@ -530,7 +678,9 @@ public class ConfigurationChecker implements HealthChecker
 
                     if ( deprecatedMethods.contains( method ) )
                     {
-                        records.add( HealthRecord.forMessage( HealthMessage.Config_InvalidSendMethod,
+                        records.add( HealthRecord.forMessage(
+                                config.getDomainID(),
+                                HealthMessage.Config_InvalidSendMethod,
                                 method.toString(),
                                 PwmSetting.RECOVERY_SENDNEWPW_METHOD.toMenuLocationDebug( forgottenPasswordProfile.getIdentifier(), locale )
                         ) );
@@ -541,7 +691,9 @@ public class ConfigurationChecker implements HealthChecker
 
                     if ( deprecatedMethods.contains( method ) )
                     {
-                        records.add( HealthRecord.forMessage( HealthMessage.Config_InvalidSendMethod,
+                        records.add( HealthRecord.forMessage(
+                                config.getDomainID(),
+                                HealthMessage.Config_InvalidSendMethod,
                                 method.toString(),
                                 PwmSetting.RECOVERY_TOKEN_SEND_METHOD.toMenuLocationDebug( forgottenPasswordProfile.getIdentifier(), locale )
                         ) );
@@ -553,11 +705,14 @@ public class ConfigurationChecker implements HealthChecker
         }
     }
 
-    static class VerifyPasswordWaitTimes implements ConfigHealthCheck
+    static class VerifyPasswordWaitTimes implements ConfigDomainHealthCheck
     {
         @Override
-        public List<HealthRecord> healthCheck( final Configuration config, final Locale locale )
+        public List<HealthRecord> healthCheck( final DomainHealthCheckRequest domainHealthCheckRequest )
         {
+            final DomainConfig config = domainHealthCheckRequest.getDomainConfig();
+            final Locale locale = domainHealthCheckRequest.getLocale();
+
             final List<HealthRecord> records = new ArrayList<>();
 
             for ( final ChangePasswordProfile changePasswordProfile : config.getChangePasswordProfile().values() )
@@ -571,6 +726,7 @@ public class ConfigurationChecker implements HealthChecker
                             + " > "
                             + " (" + maxValue + ")";
                     records.add( HealthRecord.forMessage(
+                            config.getDomainID(),
                             HealthMessage.Config_ValueConflict,
                             PwmSetting.PASSWORD_SYNC_MAX_WAIT_TIME.toMenuLocationDebug( profileID, locale ),
                             PwmSetting.PASSWORD_SYNC_MIN_WAIT_TIME.toMenuLocationDebug( profileID, locale ),
@@ -584,17 +740,22 @@ public class ConfigurationChecker implements HealthChecker
 
 
 
-    static class VerifyUserPermissionSettings implements ConfigHealthCheck
+    static class VerifyUserPermissionSettings implements ConfigDomainHealthCheck
     {
         @Override
-        public List<HealthRecord> healthCheck( final Configuration config, final Locale locale )
+        public List<HealthRecord> healthCheck( final DomainHealthCheckRequest domainHealthCheckRequest )
         {
-            final List<HealthRecord> records = new ArrayList<>();
+            final DomainConfig config = domainHealthCheckRequest.getDomainConfig();
+            final Locale locale = domainHealthCheckRequest.getLocale();
 
+            final List<HealthRecord> records = new ArrayList<>();
             final StoredConfiguration storedConfiguration = config.getStoredConfiguration();
-            for ( final StoredConfigItemKey configItemKey : StoredConfigItemKey.filterBySettingSyntax(
-                    PwmSettingSyntax.USER_PERMISSION,
-                    storedConfiguration.modifiedItems() ) )
+            final List<StoredConfigKey> interestedKeys = CollectionUtil.iteratorToStream( config.getStoredConfiguration().keys() )
+                    .filter( key -> key.isRecordType( StoredConfigKey.RecordType.SETTING ) )
+                    .filter( key -> key.toPwmSetting().getSyntax() == PwmSettingSyntax.USER_PERMISSION )
+                    .collect( Collectors.toList() );
+
+            for ( final StoredConfigKey configItemKey : interestedKeys )
             {
                 final StoredValue storedValue = storedConfiguration.readStoredValue( configItemKey ).orElseThrow( NoSuchElementException::new );
                 final List<UserPermission> permissions = ValueTypeConverter.valueToUserPermissions( storedValue );
@@ -608,6 +769,7 @@ public class ConfigurationChecker implements HealthChecker
                     {
                         final PwmSetting pwmSetting = configItemKey.toPwmSetting();
                         records.add( HealthRecord.forMessage(
+                                config.getDomainID(),
                                 HealthMessage.Config_SettingIssue,
                                 pwmSetting.toMenuLocationDebug( configItemKey.getProfileID(), locale ),
                                 e.getMessage() ) );
@@ -621,45 +783,65 @@ public class ConfigurationChecker implements HealthChecker
         }
 
         private static List<HealthRecord> checkLdapProfile(
-                final Configuration configuration,
-                final StoredConfigItemKey storedConfigItemKey,
+                final DomainConfig domainConfig,
+                final StoredConfigKey storedConfigKey,
                 final Locale locale,
                 final UserPermission permission
         )
         {
-            final List<LdapProfile> ldapProfiles = ldapProfilesForLdapProfileSetting( configuration, permission.getLdapProfileID() );
+            final List<LdapProfile> ldapProfiles = ldapProfilesForLdapProfileSetting( domainConfig, permission.getLdapProfileID() );
             if ( ldapProfiles.isEmpty()  )
             {
-                final PwmSetting pwmSetting = storedConfigItemKey.toPwmSetting();
+                final PwmSetting pwmSetting = storedConfigKey.toPwmSetting();
                 return Collections.singletonList( HealthRecord.forMessage(
+                        domainConfig.getDomainID(),
                         HealthMessage.Config_ProfileValueValidity,
-                        pwmSetting.toMenuLocationDebug( storedConfigItemKey.getProfileID(), locale ),
+                        pwmSetting.toMenuLocationDebug( storedConfigKey.getProfileID(), locale ),
                         permission.getLdapProfileID() ) );
             }
 
             return Collections.emptyList();
         }
 
-        public static List<LdapProfile> ldapProfilesForLdapProfileSetting( final Configuration configuration, final String profileID )
+        public static List<LdapProfile> ldapProfilesForLdapProfileSetting( final DomainConfig domainConfig, final String profileID )
         {
             if ( UserPermissionUtility.isAllProfiles( profileID ) )
             {
-                return Collections.unmodifiableList( new ArrayList<>( configuration.getLdapProfiles().values() ) );
+                return List.copyOf( domainConfig.getLdapProfiles().values() );
             }
 
-            if ( configuration.getLdapProfiles().containsKey( profileID ) )
+            if ( domainConfig.getLdapProfiles().containsKey( profileID ) )
             {
-                return Collections.singletonList( configuration.getLdapProfiles().get( profileID ) );
+                return Collections.singletonList( domainConfig.getLdapProfiles().get( profileID ) );
             }
 
             return Collections.emptyList();
         }
     }
 
-    interface ConfigHealthCheck
+    @Value
+    static class DomainHealthCheckRequest
     {
-        List<HealthRecord> healthCheck(
-                Configuration configuration,
-                Locale locale );
+        private final DomainConfig domainConfig;
+        private final Locale locale;
+        private final SessionLabel sessionLabel;
+    }
+
+    interface ConfigDomainHealthCheck
+    {
+        List<HealthRecord> healthCheck( DomainHealthCheckRequest domainHealthCheckRequest );
+    }
+
+    @Value
+    static class SystemHealthCheckRequest
+    {
+        private final AppConfig domainConfig;
+        private final Locale locale;
+        private final SessionLabel sessionLabel;
+    }
+
+    interface ConfigSystemHealthCheck
+    {
+        List<HealthRecord> healthCheck( SystemHealthCheckRequest systemHealthCheckRequest );
     }
 }
