@@ -3,7 +3,7 @@
  * http://www.pwm-project.org
  *
  * Copyright (c) 2006-2009 Novell, Inc.
- * Copyright (c) 2009-2020 The PWM Project
+ * Copyright (c) 2009-2021 The PWM Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -31,6 +31,9 @@ import lombok.Value;
 import password.pwm.AppAttribute;
 import password.pwm.AppProperty;
 import password.pwm.PwmApplication;
+import password.pwm.PwmDomain;
+import password.pwm.bean.DomainID;
+import password.pwm.bean.SessionLabel;
 import password.pwm.config.option.DataStorageMethod;
 import password.pwm.config.profile.LdapProfile;
 import password.pwm.error.ErrorInformation;
@@ -38,9 +41,11 @@ import password.pwm.error.PwmError;
 import password.pwm.error.PwmException;
 import password.pwm.error.PwmUnrecoverableException;
 import password.pwm.health.HealthRecord;
+import password.pwm.svc.AbstractPwmService;
 import password.pwm.svc.PwmService;
 import password.pwm.util.PwmScheduler;
 import password.pwm.util.java.AtomicLoopIntIncrementer;
+import password.pwm.util.java.CollectionUtil;
 import password.pwm.util.java.ConditionalTaskExecutor;
 import password.pwm.util.java.JavaHelper;
 import password.pwm.util.java.JsonUtil;
@@ -51,7 +56,6 @@ import password.pwm.util.logging.PwmLogger;
 
 import java.io.Serializable;
 import java.time.Instant;
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -69,7 +73,7 @@ import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.locks.ReentrantLock;
 import java.util.function.Consumer;
 
-public class LdapConnectionService implements PwmService
+public class LdapConnectionService extends AbstractPwmService implements PwmService
 {
     private static final PwmLogger LOGGER = PwmLogger.forClass( LdapConnectionService.class );
 
@@ -80,16 +84,31 @@ public class LdapConnectionService implements PwmService
     private final ConditionalTaskExecutor debugLogger = ConditionalTaskExecutor.forPeriodicTask( this::conditionallyLogDebugInfo, TimeDuration.MINUTE );
     private final Map<String, Map<Integer, ChaiProvider>> proxyChaiProviders = new HashMap<>();
 
-    private PwmApplication pwmApplication;
+    private PwmDomain pwmDomain;
     private ExecutorService executorService;
     private ChaiProviderFactory chaiProviderFactory;
     private AtomicLoopIntIncrementer slotIncrementer;
 
-    private volatile STATUS status = STATUS.CLOSED;
-
     private boolean useThreadLocal;
 
     private final StatisticCounterBundle<StatKey> stats = new StatisticCounterBundle<>( StatKey.class );
+
+    public static long totalLdapConnectionCount( final PwmApplication pwmApplication )
+    {
+        return pwmApplication.domains().values().stream()
+                .map( PwmDomain::getLdapConnectionService )
+                .map( LdapConnectionService::connectionCount )
+                .map( Long::valueOf )
+                .reduce( 0L, Long::sum );
+    }
+
+    public static int totalLdapProfileCount( final PwmApplication pwmApplication )
+    {
+        return pwmApplication.domains().values().stream()
+                .map( PwmDomain::getConfig )
+                .map( s -> s.getLdapProfiles().size() )
+                .reduce( 0, Integer::sum );
+    }
 
     enum StatKey
     {
@@ -116,47 +135,47 @@ public class LdapConnectionService implements PwmService
     }
 
     @Override
-    public STATUS status( )
+    protected Set<PwmApplication.Condition> openConditions()
     {
-        return status;
+        return Collections.emptySet();
     }
 
     @Override
-    public void init( final PwmApplication pwmApplication )
+    public STATUS postAbstractInit( final PwmApplication pwmApplication, final DomainID domainID )
             throws PwmException
     {
-        this.pwmApplication = pwmApplication;
+        this.pwmDomain = pwmApplication.domains().get( domainID );
         this.chaiProviderFactory = ChaiProviderFactory.newProviderFactory();
 
-        useThreadLocal = Boolean.parseBoolean( pwmApplication.getConfig().readAppProperty( AppProperty.LDAP_PROXY_USE_THREAD_LOCAL ) );
+        useThreadLocal = Boolean.parseBoolean( pwmDomain.getConfig().readAppProperty( AppProperty.LDAP_PROXY_USE_THREAD_LOCAL ) );
         LOGGER.trace( () -> "threadLocal enabled: " + useThreadLocal );
 
         // read the lastLoginTime
-        this.lastLdapErrors.putAll( readLastLdapFailure( pwmApplication ) );
+        this.lastLdapErrors.putAll( readLastLdapFailure( pwmDomain ) );
 
         final long idleWeakTimeoutMS = JavaHelper.silentParseLong(
-                pwmApplication.getConfig().readAppProperty( AppProperty.LDAP_PROXY_IDLE_THREAD_LOCAL_TIMEOUT_MS ),
+                pwmDomain.getConfig().readAppProperty( AppProperty.LDAP_PROXY_IDLE_THREAD_LOCAL_TIMEOUT_MS ),
                 60_000 );
         final TimeDuration idleWeakTimeout = TimeDuration.of( idleWeakTimeoutMS, TimeDuration.Unit.MILLISECONDS );
-        this.executorService = PwmScheduler.makeBackgroundExecutor( pwmApplication, this.getClass() );
-        this.pwmApplication.getPwmScheduler().scheduleFixedRateJob( new ThreadLocalCleaner(), executorService, idleWeakTimeout, idleWeakTimeout );
+        this.executorService = PwmScheduler.makeBackgroundExecutor( pwmDomain.getPwmApplication(), this.getClass() );
+        pwmDomain.getPwmApplication().getPwmScheduler().scheduleFixedRateJob( new ThreadLocalCleaner(), executorService, idleWeakTimeout, idleWeakTimeout );
 
-        final int connectionsPerProfile = maxSlotsPerProfile( pwmApplication );
+        final int connectionsPerProfile = maxSlotsPerProfile( pwmDomain );
         LOGGER.trace( () -> "allocating " + connectionsPerProfile + " ldap proxy connections per profile" );
         slotIncrementer = AtomicLoopIntIncrementer.builder().ceiling( connectionsPerProfile ).build();
 
-        for ( final LdapProfile ldapProfile : pwmApplication.getConfig().getLdapProfiles().values() )
+        for ( final LdapProfile ldapProfile : pwmDomain.getConfig().getLdapProfiles().values() )
         {
             proxyChaiProviders.put( ldapProfile.getIdentifier(), new ConcurrentHashMap<>() );
         }
 
-        status = STATUS.OPEN;
+        return STATUS.OPEN;
     }
 
     @Override
     public void close( )
     {
-        status = STATUS.CLOSED;
+        setStatus( STATUS.CLOSED );
         logDebugInfo();
         LOGGER.trace( () -> "closing ldap proxy connections" );
 
@@ -177,9 +196,9 @@ public class LdapConnectionService implements PwmService
     }
 
     @Override
-    public List<HealthRecord> healthCheck( )
+    public List<HealthRecord> serviceHealthCheck( )
     {
-        return null;
+        return Collections.emptyList();
     }
 
     @Override
@@ -195,17 +214,17 @@ public class LdapConnectionService implements PwmService
     }
 
 
-    public ChaiProvider getProxyChaiProvider( final String identifier )
+    public ChaiProvider getProxyChaiProvider( final SessionLabel sessionLabel, final String identifier )
             throws PwmUnrecoverableException
     {
-        final LdapProfile ldapProfile = pwmApplication.getConfig().getLdapProfiles().get( identifier );
-        return getProxyChaiProvider( ldapProfile );
+        final LdapProfile ldapProfile = pwmDomain.getConfig().getLdapProfiles().get( identifier );
+        return getProxyChaiProvider( sessionLabel, ldapProfile );
     }
 
-    public ChaiProvider getProxyChaiProvider( final LdapProfile ldapProfile )
+    public ChaiProvider getProxyChaiProvider( final SessionLabel sessionLabel, final LdapProfile ldapProfile )
             throws PwmUnrecoverableException
     {
-        if ( status != STATUS.OPEN )
+        if ( status() != STATUS.OPEN )
         {
             throw new IllegalStateException( "unable to obtain proxy chai provider from closed LdapConnectionService" );
         }
@@ -213,18 +232,18 @@ public class LdapConnectionService implements PwmService
         debugLogger.conditionallyExecuteTask();
 
         final LdapProfile effectiveProfile = ldapProfile == null
-                ? pwmApplication.getConfig().getDefaultLdapProfile()
+                ? pwmDomain.getConfig().getDefaultLdapProfile()
                 : ldapProfile;
 
         if ( useThreadLocal )
         {
-            return getThreadLocalChaiProvider( effectiveProfile );
+            return getThreadLocalChaiProvider( sessionLabel, effectiveProfile );
         }
 
-        return getSharedLocalChaiProvider( effectiveProfile );
+        return getSharedLocalChaiProvider( sessionLabel, effectiveProfile );
     }
 
-    private ChaiProvider getSharedLocalChaiProvider( final LdapProfile ldapProfile )
+    private ChaiProvider getSharedLocalChaiProvider( final SessionLabel sessionLabel, final LdapProfile ldapProfile )
             throws PwmUnrecoverableException
     {
         final int slot = slotIncrementer.next();
@@ -232,7 +251,7 @@ public class LdapConnectionService implements PwmService
 
         if ( proxyChaiProvider == null )
         {
-            final ChaiProvider newProvider = newProxyChaiProvider( ldapProfile );
+            final ChaiProvider newProvider = newProxyChaiProvider( sessionLabel, ldapProfile );
             proxyChaiProviders.get( ldapProfile.getIdentifier() ).put( slot, newProvider );
             return newProvider;
         }
@@ -240,7 +259,7 @@ public class LdapConnectionService implements PwmService
         return proxyChaiProvider;
     }
 
-    private ChaiProvider getThreadLocalChaiProvider( final LdapProfile ldapProfile )
+    private ChaiProvider getThreadLocalChaiProvider( final SessionLabel sessionLabel, final LdapProfile ldapProfile )
             throws PwmUnrecoverableException
     {
         reentrantLock.lock();
@@ -258,7 +277,7 @@ public class LdapConnectionService implements PwmService
 
             if ( !threadLocalContainer.getProviderMap().containsKey( profileID ) )
             {
-                final ChaiProvider chaiProvider = newProxyChaiProvider( ldapProfile );
+                final ChaiProvider chaiProvider = newProxyChaiProvider( sessionLabel, ldapProfile );
                 threadLocalContainer.getProviderMap().put( profileID, chaiProvider );
             }
 
@@ -272,7 +291,7 @@ public class LdapConnectionService implements PwmService
         }
     }
 
-    private ChaiProvider newProxyChaiProvider( final LdapProfile ldapProfile )
+    private ChaiProvider newProxyChaiProvider( final SessionLabel sessionLabel, final LdapProfile ldapProfile )
             throws PwmUnrecoverableException
     {
         Objects.requireNonNull( ldapProfile, "ldapProfile must not be null" );
@@ -280,13 +299,13 @@ public class LdapConnectionService implements PwmService
         try
         {
             final ChaiProvider chaiProvider = LdapOperationsHelper.openProxyChaiProvider(
-                    pwmApplication,
-                    null,
+                    pwmDomain,
+                    sessionLabel,
                     ldapProfile,
-                    pwmApplication.getConfig(),
-                    pwmApplication.getStatisticsManager()
+                    pwmDomain.getConfig(),
+                    pwmDomain.getStatisticsManager()
             );
-            LOGGER.trace( () -> "created new system proxy chaiProvider id=" + chaiProvider.toString()
+            LOGGER.trace( sessionLabel, () -> "created new system proxy chaiProvider id=" + chaiProvider.toString()
                     + " for ldap profile '" + ldapProfile.getIdentifier() + "'"
                     + " thread=" + Thread.currentThread().getName() );
             stats.increment( StatKey.createdProxies );
@@ -310,7 +329,7 @@ public class LdapConnectionService implements PwmService
     {
         lastLdapErrors.put( ldapProfile.getIdentifier(), errorInformation );
         final String jsonString = JsonUtil.serializeMap( lastLdapErrors );
-        pwmApplication.writeAppAttribute( AppAttribute.LAST_LDAP_ERROR, jsonString );
+        pwmDomain.getPwmApplication().writeAppAttribute( AppAttribute.LAST_LDAP_ERROR, jsonString );
     }
 
     public Map<String, ErrorInformation> getLastLdapFailure( )
@@ -328,22 +347,22 @@ public class LdapConnectionService implements PwmService
         return null;
     }
 
-    private static Map<String, ErrorInformation> readLastLdapFailure( final PwmApplication pwmApplication )
+    private static Map<String, ErrorInformation> readLastLdapFailure( final PwmDomain pwmDomain )
     {
         String lastLdapFailureStr = null;
         try
         {
-            final Optional<String> optionalLastLdapError = pwmApplication.readAppAttribute( AppAttribute.LAST_LDAP_ERROR, String.class );
+            final Optional<String> optionalLastLdapError = pwmDomain.getPwmApplication().readAppAttribute( AppAttribute.LAST_LDAP_ERROR, String.class );
             if ( optionalLastLdapError.isPresent() )
             {
                 lastLdapFailureStr = optionalLastLdapError.get();
-                if ( !StringUtil.isEmpty( lastLdapFailureStr ) )
+                if ( StringUtil.notEmpty( lastLdapFailureStr ) )
                 {
                     final Map<String, ErrorInformation> fromJson = JsonUtil.deserialize( lastLdapFailureStr, new TypeToken<Map<String, ErrorInformation>>()
                     {
                     } );
                     final Map<String, ErrorInformation> returnMap = new HashMap<>( fromJson );
-                    returnMap.keySet().retainAll( pwmApplication.getConfig().getLdapProfiles().keySet() );
+                    returnMap.keySet().retainAll( pwmDomain.getConfig().getLdapProfiles().keySet() );
                     return returnMap;
                 }
             }
@@ -356,11 +375,11 @@ public class LdapConnectionService implements PwmService
         return Collections.emptyMap();
     }
 
-    private int maxSlotsPerProfile( final PwmApplication pwmApplication )
+    private int maxSlotsPerProfile( final PwmDomain pwmDomain )
     {
-        final int maxConnections = Integer.parseInt( pwmApplication.getConfig().readAppProperty( AppProperty.LDAP_PROXY_MAX_CONNECTIONS ) );
-        final int perProfile = Integer.parseInt( pwmApplication.getConfig().readAppProperty( AppProperty.LDAP_PROXY_CONNECTION_PER_PROFILE ) );
-        final int profileCount = pwmApplication.getConfig().getLdapProfiles().size();
+        final int maxConnections = Integer.parseInt( pwmDomain.getConfig().readAppProperty( AppProperty.LDAP_PROXY_MAX_CONNECTIONS ) );
+        final int perProfile = Integer.parseInt( pwmDomain.getConfig().readAppProperty( AppProperty.LDAP_PROXY_CONNECTION_PER_PROFILE ) );
+        final int profileCount = pwmDomain.getConfig().getLdapProfiles().size();
 
         if ( ( perProfile * profileCount ) >= maxConnections )
         {
@@ -388,7 +407,7 @@ public class LdapConnectionService implements PwmService
 
     public ChaiProviderFactory getChaiProviderFactory( )
     {
-        if ( status != STATUS.OPEN )
+        if ( status() != STATUS.OPEN )
         {
             throw new IllegalStateException( "unable to obtain chai provider factory from closed LdapConnectionService" );
         }
@@ -406,7 +425,7 @@ public class LdapConnectionService implements PwmService
 
     private void logDebugInfo()
     {
-        LOGGER.trace( () -> "status: " + StringUtil.mapToString( connectionDebugInfo() ) );
+        LOGGER.trace( getSessionLabel(), () -> "status: " + StringUtil.mapToString( connectionDebugInfo() ) );
     }
 
     public List<ConnectionInfo> getConnectionInfos()
@@ -426,7 +445,7 @@ public class LdapConnectionService implements PwmService
 
             returnData.put( bindDN, connectionInfo );
         }
-        return Collections.unmodifiableList( new ArrayList<>( returnData.values() ) );
+        return List.copyOf( returnData.values() );
     }
 
     @Value
@@ -455,7 +474,7 @@ public class LdapConnectionService implements PwmService
         debugInfo.put( DebugKey.ThreadLocals, String.valueOf( threadLocalConnections.get( ) ) );
         debugInfo.put( DebugKey.CreatedProviders, String.valueOf( stats.get( StatKey.createdProxies ) ) );
         debugInfo.put( DebugKey.DiscardedThreadLocals, String.valueOf( stats.get( StatKey.clearedThreadLocals ) ) );
-        return Collections.unmodifiableMap( JavaHelper.enumMapToStringMap( debugInfo ) );
+        return Collections.unmodifiableMap( CollectionUtil.enumMapToStringMap( debugInfo ) );
     }
 
     @Data
