@@ -3,7 +3,7 @@
  * http://www.pwm-project.org
  *
  * Copyright (c) 2006-2009 Novell, Inc.
- * Copyright (c) 2009-2020 The PWM Project
+ * Copyright (c) 2009-2021 The PWM Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -30,7 +30,6 @@ import password.pwm.util.localdb.TestHelper;
 import password.pwm.util.macro.MacroRequest;
 import password.pwm.util.password.PasswordRuleReaderHelper;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -46,12 +45,11 @@ public class PasswordRuleReaderHelperTest
     {
         final Map<String, String> userAttributes;
         {
-            final Map<String, String> map = new HashMap<>();
-            map.put( "cn", "fflintstone" );
-            map.put( "email", "fred@flintstones.tv" );
-            map.put( "givenName", "Fred" );
-            map.put( "sn", "Flintstone" );
-            userAttributes = Collections.unmodifiableMap( map );
+            userAttributes = Map.of(
+                    "cn", "fflintstone",
+                    "email", "fred@flintstones.tv",
+                    "givenName", "Fred",
+                    "sn", "Flintstone" );
         }
 
         final PwmApplication pwmApplication = TestHelper.makeTestPwmApplication( temporaryFolder.newFolder() );
@@ -69,7 +67,7 @@ public class PasswordRuleReaderHelperTest
     {
         final Map<String, String> passwordPolicyRules = new HashMap<>( );
         passwordPolicyRules.put( PwmPasswordRule.AllowMacroInRegExSetting.getKey(), Boolean.toString( enableMacros ) );
-        return new PasswordRuleReaderHelper( PwmPasswordPolicy.createPwmPasswordPolicy( passwordPolicyRules ) );
+        return new PasswordRuleReaderHelper( PwmPasswordPolicy.createPwmPasswordPolicy( PwmPasswordPolicy.defaultPolicy().getDomainID(), passwordPolicyRules ) );
     }
 
     @Test
@@ -83,7 +81,7 @@ public class PasswordRuleReaderHelperTest
         final List<Pattern> patterns = ruleHelper.readRegExSetting( PwmPasswordRule.RegExMatch, macroRequest, input );
 
         final String expected = "fflintstone, First Name: Fred, Last Name: Flintstone, Email: fred@flintstones.tv";
-        Assert.assertEquals( patterns.size(), 1 );
+        Assert.assertEquals( 1, patterns.size() );
         Assert.assertEquals( expected, patterns.get( 0 ).pattern() );
     }
 
@@ -97,7 +95,7 @@ public class PasswordRuleReaderHelperTest
 
         final List<Pattern> patterns = ruleHelper.readRegExSetting( PwmPasswordRule.RegExMatch, macroRequest, input );
 
-        Assert.assertEquals( patterns.size(), 2 );
+        Assert.assertEquals( 2, patterns.size() );
         Assert.assertEquals( "^fflintstone[0-9]+$", patterns.get( 0 ).pattern() );
         Assert.assertEquals( "^password$", patterns.get( 1 ).pattern() );
     }
